segundo commit oscar

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/mnt/perfiles/aalema/.netbeans/28/build.properties
+user.properties.file=/home/daw1al13/.netbeans/26/build.properties
